# crypto_converter

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
currency_conversion/: __main__.py
currency_conversion/api/: api.py  quote.py
currency_conversion/core/: events.py  settings.py
currency_conversion/services/: quote_consumer.py
db/migrations/: env.py
db/migrations/versions/: 1759429711_candles_1s_timeframe.py
db/queries/: queries.py
db/queries/sql/: candles.sql
db/repositories/: __init__.py  base.py
db/repositories/candles_1s/: repo.py  schema.py
quote_consumer/: __main__.py  candle_processor.py
quote_consumer/api/: api.py  candles.py  dependencies.py
quote_consumer/core/: events.py  settings.py
quote_consumer/ws_connector/: __init__.py  base.py  binance.py
schemas/: types.py
scripts/: format  lint
