[project]
name = "crypto_converter"
version = "0.1.0"
description = "Realtime Crypto Converter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosonic>=0.26.0",
    "aiosql>=13.4",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "ujson>=5.11.0",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.3",
]

[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D211",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "EM101",
    "RUF012",
    "ARG001",
    "ARG002",
    "E741",
    "PGH003",
    "EM102",
    "BLE001",
    "FAST002",
    "B008",
    "S104",
    "B911",
]
# Exclude these paths from Ruff checks
exclude = [
    "db/migrations/env.py",
]

fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
